--- a/mountainInfoPage/index.html
+++ b/mountainInfoPage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountain Information Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Navbar</a>
+            <a class="navbar-brand" href="/">Nature's Frontier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,14 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/nationalParkSearchPage/">National Park Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
+                        <a class="nav-link active" aria-current="page" href="/mountainInfoPage/">Mountain
+                            Information</a>
                     </li>
                 </ul>
             </div>
@@ -43,9 +44,12 @@
 
     <main class="container">
         <div class="searchBoxes">
-            <select name="mountainInfo" id="mountainInfo">
-                <option value=''>Choose a mountain</option>
-            </select>
+            <form>
+                <select name="mountainInfo" id="mountainInfo">
+                    <option value=''>Choose a mountain</option>
+                </select>
+                <input type="reset" value="Reset" id="resetSearch"></input>
+            </form>
         </div>
         <div id="mountainInfoCards"></div>
     </main>
