--- a/nationalParkSearchPage/index.html
+++ b/nationalParkSearchPage/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Navbar</a>
+                <a class="navbar-brand" href="/">Nature's Frontier</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/nationalParkSearchPage/">National Park Search</a>
+                            <a class="nav-link active" aria-current="page" href="/nationalParkSearchPage/">National Park
+                                Search</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
@@ -47,15 +48,18 @@
 
     <main class="container">
         <div class="searchBoxes">
-            <select name="searchLocation" id="searchLocation">
-                <option value=''>Choose a state below</option>
-            </select>
-            <h4>Or</h4>
-            <select name="searchParkType" id="searchParkType">
-                <option value=''>Choose a park type below</option>
-            </select>
-            <h4>Or</h4>
-            <button id="viewAllButton">View All Parks</button>
+            <form>
+                <select name="searchLocation" id="searchLocation">
+                    <option value=''>Choose a state below</option>
+                </select>
+                <h4>and/or</h4>
+                <select name="searchParkType" id="searchParkType">
+                    <option value=''>Choose a park type below</option>
+                </select>
+                <h4>or</h4>
+                <button id="viewAllButton">View All Parks</button>
+                <input type="reset" value="Reset" id="resetSearch"></input>
+            </form>
         </div>
         <div id="parkSearchCards"></div>
     </main>
