--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="entirePage">
 
 <head>
     <meta charset="UTF-8">
@@ -12,33 +12,44 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
+    <script defer src="/main.js"></script>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Nature's Frontier</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/nationalParkSearchPage/">National Park Search</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Nature's Frontier</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/nationalParkSearchPage/">National Park Search</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
+                </button>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
