--- a/nationalParkSearchPage/index.html
+++ b/nationalParkSearchPage/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="entirePage">
 
 <head>
     <meta charset="UTF-8">
@@ -11,17 +11,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
     <script defer src="/scripts/locationData.js"></script>
     <script defer src="/scripts/parkTypeData.js"></script>
     <script defer src="/scripts/nationalParkData.js"></script>
     <script defer src="/nationalParkSearchPage/searchPage.js"></script>
+    <script defer src="/main.js"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-sm bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Nature's Frontier</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,26 +43,27 @@
                         </li>
                     </ul>
                 </div>
+                <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
+                </button>
             </div>
         </nav>
     </header>
 
     <main class="container">
-        <div class="searchBoxes">
+        <div class="searchBoxes mx-auto my-5">
             <form>
-                <select name="searchLocation" id="searchLocation">
-                    <option value=''>Choose a state below</option>
+                <select class="form-select" name="searchLocation" id="searchLocation">
+                    <option value=''>Choose a location</option>
                 </select>
                 <h4>and/or</h4>
-                <select name="searchParkType" id="searchParkType">
-                    <option value=''>Choose a park type below</option>
+                <select class="form-select" name="searchParkType" id="searchParkType">
+                    <option value=''>Choose a park type</option>
                 </select>
-                <h4>or</h4>
-                <button id="viewAllButton">View All Parks</button>
-                <input type="reset" value="Reset" id="resetSearch"></input>
+                <button type='button' class="btn btn-success mt-3" id="viewAllButton">View All Parks</button>
+                <input type="reset" class="btn btn-danger mt-3" value="Reset" id="resetSearch"></input>
             </form>
         </div>
-        <div id="parkSearchCards"></div>
+        <div id="parkSearchCards" class="row"></div>
     </main>
 
     <footer>
