--- a/index.html
+++ b/index.html
@@ -11,45 +11,114 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/9c20733b0a.js" crossorigin="anonymous"></script>
     <script defer src="/main.js"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-sm bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">Nature's Frontier</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/nationalParkSearchPage/">National Park Search</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
-                        </li>
-                    </ul>
+    <div id="pageContainer">
+        <header>
+            <nav class="navbar navbar-expand-sm bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60px"
+                            height="60px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/nationalParkSearchPage/">National Parks</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/mountainInfoPage/">Mountains</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
+                    </button>
                 </div>
-                <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
-                </button>
+            </nav>
+        </header>
+
+        <div class="container-fluid">
+            <img src="/myImages/Homepage image.jpg" alt="National Park" width="100%" height="100%">
+        </div>
+
+        <div id="contentContainer">
+            <main class="container homePageCont">
+                <p>Welcome to Nature's Frontier, your ultimate destination for discovering the breathtaking beauty of
+                    our
+                    nation's
+                    national
+                    parks and majestic mountains! Whether you're an avid hiker, nature enthusiast, or simply seeking an
+                    awe-inspiring
+                    adventure, our website is designed to be your reliable guide and companion.</p>
+                <p>At Nature's Frontier, we understand the allure of wide-open spaces, towering peaks, and untamed
+                    wilderness.
+                    Our
+                    mission is
+                    to connect you with the natural wonders that define our country, from rugged mountain ranges to
+                    pristine
+                    alpine lakes,
+                    and everything in between. With our comprehensive search platform, you'll unlock a world of
+                    possibilities,
+                    allowing you
+                    to plan your next outdoor escapade with ease and confidence.</p>
+                <p>Immerse yourself in the vast expanse of nature's grandeur as you explore our extensive database of
+                    national
+                    parks and
+                    mountains. Discover hidden gems tucked away in remote corners of the country or embark on iconic
+                    trails
+                    renowned for
+                    their awe-inspiring vistas. With the national park and mountain page, you'll find detailed
+                    descriptions,
+                    captivating
+                    imagery,
+                    and vital information to help you make informed decisions about your next expedition.</p>
+                <p>Our user-friendly search interface empowers you to filter results based on location, park type, and
+                    mountain name. Whether you're a seasoned mountaineer seeking a challenging summit or a family
+                    looking for
+                    a leisurely hike suitable for all ages, Nature's Frontier will tailor your search to match your
+                    preferences,
+                    ensuring an
+                    unforgettable experience for everyone.</p>
+            </main>
+        </div>
+
+        <footer id="footer" class="container-fluid mt-3 bg-body-tertiary pt-2">
+            <div class="row">
+                <div class="col-4">
+                    <h5 class="closer"><i class="fa-solid fa-copyright"></i> Copyright</h5>
+                    <p class="closer">© 2023 Nature's Frontier - All Rights Reserved.</p>
+                    <p class="closer">Last Updated: 5/25/2023</p>
+                    <p id="currentTime"></p>
+                </div>
+                <div class="col-4">
+                    <h5 class="closer">Socia Media Links</h5>
+                    <p class="closer"><i class="fa-brands fa-facebook"></i><a href="#" class="bottomNav">Facebook</a>
+                    </p>
+                    <p class="closer"><i class="fa-brands fa-twitter"></i><a href="#" class="bottomNav">Twitter</a>
+                    </p>
+                    <p class="closer"><i class="fa-brands fa-snapchat"></i><a href="#" class="bottomNav">Snapchat</a>
+                    </p>
+                </div>
+                <div class="col-4">
+                    <h5 class="closer">Contact Info</h5>
+                    <p class="closer">E-mail: davempark@gmail.com</p>
+                    <p class="closer">Phone: 516-660-3127</p>
+                    <p class="closer">Fax: ###-###-####</p>
+                </div>
             </div>
-        </nav>
-    </header>
+        </footer>
+    </div>
 
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
 </body>
 
 </html>
