--- a/nationalParkSearchPage/index.html
+++ b/nationalParkSearchPage/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9c20733b0a.js" crossorigin="anonymous"></script>
     <script defer src="/scripts/locationData.js"></script>
     <script defer src="/scripts/parkTypeData.js"></script>
     <script defer src="/scripts/nationalParkData.js"></script>
@@ -21,54 +22,82 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-sm bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">Nature's Frontier</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/nationalParkSearchPage/">National Park
-                                Search</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/mountainInfoPage/">Mountain Information</a>
-                        </li>
-                    </ul>
+    <div id="pageContainer">
+
+        <header>
+            <nav class="navbar navbar-expand-sm bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60px"
+                            height="60px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/nationalParkSearchPage/">National
+                                    Parks</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/mountainInfoPage/">Mountains</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
+                    </button>
                 </div>
-                <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
-                </button>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <main class="container">
-        <div class="searchBoxes mx-auto my-5">
-            <form>
-                <select class="form-select" name="searchLocation" id="searchLocation">
-                    <option value=''>Choose a location</option>
-                </select>
-                <h4>and/or</h4>
-                <select class="form-select" name="searchParkType" id="searchParkType">
-                    <option value=''>Choose a park type</option>
-                </select>
-                <button type='button' class="btn btn-success mt-3" id="viewAllButton">View All Parks</button>
-                <input type="reset" class="btn btn-danger mt-3" value="Reset" id="resetSearch"></input>
-            </form>
+        <div id="contentContainer">
+            <main class="container">
+                <div class="searchBoxes mx-auto my-5">
+                    <form>
+                        <select class="form-select" name="searchLocation" id="searchLocation">
+                            <option value=''>Choose a location</option>
+                        </select>
+                        <h4>and/or</h4>
+                        <select class="form-select" name="searchParkType" id="searchParkType">
+                            <option value=''>Choose a park type</option>
+                        </select>
+                        <button type='button' class="btn btn-success mt-3" id="viewAllButton">View All Parks</button>
+                        <input type="reset" class="btn btn-danger mt-3" value="Reset" id="resetSearch"></input>
+                    </form>
+                </div>
+                <div id="parkSearchCards" class="row">
+                </div>
+            </main>
         </div>
-        <div id="parkSearchCards" class="row"></div>
-    </main>
 
-    <footer>
-
-    </footer>
+        <footer id="footer" class="container-fluid mt-3 bg-body-tertiary pt-2">
+            <div class="row">
+                <div class="col-4">
+                    <h5 class="closer"><i class="fa-solid fa-copyright"></i> Copyright</h5>
+                    <p class="closer">© 2023 Nature's Frontier - All Rights Reserved.</p>
+                    <p class="closer">Last Updated: 5/25/2023</p>
+                    <p id="currentTime"></p>
+                </div>
+                <div class="col-4">
+                    <h5 class="closer">Socia Media Links</h5>
+                    <p class="closer"><i class="fa-brands fa-facebook"></i><a href="#" class="bottomNav">Facebook</a>
+                    </p>
+                    <p class="closer"><i class="fa-brands fa-twitter"></i><a href="#" class="bottomNav">Twitter</a></p>
+                    <p class="closer"><i class="fa-brands fa-snapchat"></i><a href="#" class="bottomNav">Snapchat</a>
+                    </p>
+                </div>
+                <div class="col-4">
+                    <h5 class="closer">Contact Info</h5>
+                    <p class="closer">E-mail: davempark@gmail.com</p>
+                    <p class="closer">Phone: 516-660-3127</p>
+                    <p class="closer">Phone: ###-###-####</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 
 </body>
 
