--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
 <body>
 
+    <!-- Navbar -->
     <div id="pageContainer">
         <header>
             <nav class="navbar navbar-expand-sm bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60px"
-                            height="60px"></a>
+                    <a class="navbar-brand" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60"
+                            height="60"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -41,16 +42,16 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="btn btn-dark" type="button" id="darkMode">Dark Mode
+                    <button class="btn btn-dark btn-sm" type="button" id="darkMode">Dark Mode
                     </button>
                 </div>
             </nav>
         </header>
 
-        <div class="container-fluid">
-            <img src="/myImages/Homepage image.jpg" alt="National Park" width="100%" height="100%">
-        </div>
+        <!-- Image Container -->
+        <div class="container-fluid imageCont"></div>
 
+        <!-- Main content -->
         <div id="contentContainer">
             <main class="container homePageCont">
                 <p>Welcome to Nature's Frontier, your ultimate destination for discovering the breathtaking beauty of
@@ -92,7 +93,8 @@
             </main>
         </div>
 
-        <footer id="footer" class="container-fluid mt-3 bg-body-tertiary pt-2">
+        <!-- Footer -->
+        <footer id="footer" class="container-fluid bg-body-tertiary pt-2">
             <div class="row">
                 <div class="col-4">
                     <h5 class="closer"><i class="fa-solid fa-copyright"></i> Copyright</h5>
