--- a/mountainInfoPage/index.html
+++ b/mountainInfoPage/index.html
@@ -25,7 +25,7 @@
         <header>
             <nav class="navbar navbar-expand-sm bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60"
+                    <a class="navbar-brand logo" href="/"><img src="/myImages/logo.png" alt="Site Logo" width="60"
                             height="60"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
